--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -3,16 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env  NODE_ENV=test node --test"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.6.0",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "supertest": "^7.0.0"
   }
 }
