--- a/part10/rate-repository-app/package.json
+++ b/part10/rate-repository-app/package.json
@@ -7,20 +7,33 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint ./src/**/.{js,jsx} App.js --no-error-on-unmatched-pattern"
+    "lint": "eslint ./**/.{js,jsx} App.js --no-error-on-unmatched-pattern"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.1",
+    "@apollo/client": "^3.13.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@expo/metro-config": "^0.17.4",
+    "@expo/metro-runtime": "~4.0.1",
+    "@mui/material": "^7.0.2",
+    "dotenv": "^16.5.0",
     "expo": "^52.0.46",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-web": "~0.19.6"
+    "expo-status-bar": "~2.0.1",
+    "formik": "^2.4.6",
+    "graphql": "^16.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "0.76.9",
+    "react-native-web": "~0.19.6",
+    "react-router-native": "^6.30.0",
+    "yup": "^1.6.1",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/eslint-parser": "^7.27.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.24.0",
     "eslint": "^9.24.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-native": "^5.0.0"
